feat: Compute-1
image 등록/조회, instance 생성/조회/start/stop/terminate, 콘솔 연동
