# backend/modules/compute/src/main/kotlin/com/stratuscloud/compute/domain/ComputeOsType.kt
@@ -1,0 +1,6 @@
+package com.stratuscloud.compute.domain
+
+enum class ComputeOsType {
+    LINUX,
+    WINDOWS
+}
